--- a/themes/arranstheme/layouts/index.html
+++ b/themes/arranstheme/layouts/index.html
@@ -26,22 +26,15 @@
         lang="{{ .Site.LanguageCode }}"
         class="sans-serif w-90 w-60-ns center center-ns mv2 mv5-ns"
 >
+<section id="sidebar">
+    Recent posts:
+    <ul>
+        {{- range $postI, $post := (.Paginate ( where site.RegularPages "Section" "posts" | first 3 ) ).Pages }}
+            <li><a href="{{$post.Permalink}}">{{$post.LinkTitle}} ({{$post.Date}})</a></li>
+        {{end}}
+    </ul>
+</section>
 <section id="main">
-    <div>
-        <h1 id="title" class="f3">
-            {{ .Site.Title }} {{ .Site.Params.TitleEmoji | emojify }}
-        </h1>
-        <ul class="list pl0">
-            <!-- pages -->
-            <!-- prettier-ignore -->
-            {{ range .Site.Params.menu }}
-            <li class="b mv3">
-                <a class="f3 b pa1 black" href="{{ .url }}">{{ .name }}</a>
-            </li>
-            <!-- prettier-ignore -->
-            {{ end }}
-        </ul>
-    </div>
 </section>
 
 {{ partial "footer.html" . }}
