--- a/themes/arranstheme/layouts/post/single.html
+++ b/themes/arranstheme/layouts/post/single.html
@@ -4,7 +4,7 @@
 <span class="b">/ </span>
 <a href="{{ .Site.BaseURL  }}" class="b bb bw1 pb1 no-underline black">{{ .Site.Title }}</a>
 <span class="b"> / </span>
-<a href="/post" class="b bb bw1 pb1 no-underline black">blog</a>
+<a href="/post" class="b bb bw1 pb1 no-underline black">Posts</a>
 
 <section id="main" class="mt5">
   <h1 itemprop="name" id="title">{{ .Title }}</h1>
