--- a/themes/arranstheme/layouts/index.html
+++ b/themes/arranstheme/layouts/index.html
@@ -26,7 +26,7 @@
 <section id="sidebar">
     Recent posts:
     <ul>
-        {{- range $postI, $post := (.Paginate ( where site.RegularPages "Section" "posts" | first 3 ) ).Pages }}
+        {{- range $postI, $post := (.Paginate ( where site.RegularPages "Section" "post" | first 3 ) ).Pages }}
         <li><a href="{{$post.Permalink}}">{{$post.LinkTitle}} ({{$post.Date}})</a></li>
         {{end}}
     </ul>
